# adapter/http/routes/user.go
@@ -9,4 +9,6 @@ import (
 
 func User(app fiber.Router, auth security.Authorizer, service port.UserService) {
 	app.Get("/users", auth.Secure("ROLE_1", "ROLE_2"), handlers.FindAllUsers(service))
+	app.Post("/users", auth.Secure("ROLE_1"), handlers.CreateUser(service))
+	app.Post("/users/login", handlers.Login(service))
 }
